added the gradle build tool to the project.